# todo-cli

./: README.md  pyproject.toml
.github/workflows/: ci.yml  python-app.yml
src/application/dtos/: add_todo_dto.py
src/application/repositories/: todo_repository.py
src/application/use_cases/: add_todo_use_case.py
src/domain/: todo.py
src/domain/entities/: entity.py  todo.py
src/domain/enums/: todo_status.py
src/infrastructure/data/: file_todo_repository.py
tests/application/use_cases/: add_todo_use_case_tests.py  test_add_todo_use_case.py  test_get_todo_by_todo_id_use_case.py  test_get_todos_use_case.py  test_mark_todo_as_done_use_case.py
tests/domain/: test_todo.py
tests/domain/entities/: todo_tests.py
todo/: main.py
todo/adapters/data/repositories/: file_todo_repository.py
todo/application/dtos/: add_todo_dto.py
todo/application/repositories/: todo_repository.py
todo/application/use_cases/: add_todo_use_case.py  get_todo_by_todo_id_use_case.py  get_todos_use_case.py  mark_todo_as_done_use_case.py
todo/cli/scripts/: todo.py
todo/cli/todo/: todo.py
todo/cli/todo/commands/: add.py  details.py  list.py  mark_as_done.py
todo/domain/: entity.py  todo.py
todo/infrastructure/data/: file_todo_repository.py
todo_cli/: main.py
todo_cli/application/repositories/: todo_repository.py
todo_cli/application/use_cases/: add_todo_use_case.py
todo_cli/domain/: todo.py  todo_status.py
todo_cli/infrastructure/data/: file_todo_repository.py
