[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "todo"}]

[tool.poetry.scripts]
todo = 'todo.cli.scripts.todo:setup_cli'

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
pytest = "^7.4.0"
coverage = "^7.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
